--- a/FashionShop-Client/public/index.html
+++ b/FashionShop-Client/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/Logo.png" />
     <link rel="stylesheet" href="../src/output.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <title>Fashion</title>
   </head>
   <body>
